Renamed, Removed unused method, Changed publishGCData method